--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,15 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!-- <script></script> -->
+    <script>
+      function copyright() {
+        const date = new Date().getFullYear();
+        console.log(`
+  \u00A9 ${date} Edwin M. Escobar
+  https://github.com/escowin/escowinart
+  `);
+      }
+      copyright();
+    </script>
   </body>
 </html>
